[package]
name = "dao-traits"
version = "0.1.0"
authors = ["DoraFactory Developers <https://github.com/DoraFactory>"]
description = "dao core traits support"
edition = "2021"

[dev-dependencies]
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.19" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.19" }

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.19" }

[features]
default = ["std"]
std = [
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
]
