[package]
name = "dao-traits"
version = "0.2.0"
authors = ["DoraFactory Developers <https://github.com/DoraFactory>"]
description = "dao core traits support"
edition = "2021"

[dev-dependencies]
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
std = [
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
]
